--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div class="container">
     <div class="image">
-      <img src="assets/images/image-omelette.jpeg" alt="omelette">
+      <img src="./assets/images/image-omelette.jpeg" class = "omlette" alt="omelette">
     </div>
     <div class="desc">
       <h1>Simple Omelette Recipe</h1>
